Added the delete endpoint
